# holistic-agent-observability

./: .env.example  .gitignore  README.md  powermetrics_log.txt  pyproject.toml
agent/: __init__.py  callbacks.py  cli.py  config.py  demo.py  factory.py  leak_judge.py  run_prompts.py  state.py  tools.py  trace_summary_server.py  tracing.py  visibility.py
data/banking/: banking_state.json
data/carbon/: carbon_d0f8fca27adb14f51c589180c21da3c82da895a3_1763290749.json  carbon_d0f8fca27adb14f51c589180c21da3c82da895a3_1763291193.json  carbon_d0f8fca27adb14f51c589180c21da3c82da895a3_1763291511.json  carbon_d0f8fca27adb14f51c589180c21da3c82da895a3_1763291776.json
observability/: .env.example  index.html  package-lock.json  package.json
observability/failure_analysis/: analyzer.py  api.py  schemas.py
observability/failure_analysis/detectors/: __init__.py  behaviour.py  data_leakage.py  safety.py  tool_misuse.py
observability/src/: App.css  App.tsx  index.css
observability/src/components/: DataFlowGraph.tsx  TimelineNode.tsx  TraceTable.css  TraceTable.tsx
observability/src/lib/: dataflow.ts  failureAnalysis.ts  langfuse.ts
observability_backend/: __init__.py  metrics.py  run_prompts.py  trace_summary_server.py
prompts/: banking_use_case.json
resources/: TRACK_A_RESOURCES.md  TRACK_B_RESOURCES.md  TRACK_C_RESOURCES.md
tutorials/: 01_basic_agent.ipynb  02_custom_tools.ipynb  03_structured_output.ipynb  04_model_monitoring.ipynb  05_observability.ipynb  06_benchmark_evaluation.ipynb  07_reinforcement_learning.ipynb  08_attack_red_teaming.ipynb
