[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glass-agent"
version = "0.1.0"
description = "Basic LangGraph ReAct agent setup"
requires-python = ">=3.11"
authors = [
  { name = "Glass Agent" }
]
dependencies = [
  "langgraph>=1.0.3,<1.1.0",
  "langchain>=1.0.7,<2.0.0",
  "langchain-core>=1.0.5,<2.0.0",
  "langchain-openai>=1.0.2,<2.0.0",
  "langchain-ollama>=0.3.5,<0.4.0",
  "langfuse>=3.10.0,<4.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.29.0,<0.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]
